修改了一下，参见网页结构说明v1.2.1

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="{% static "js/getToken.js" %}" type="text/javascript"></script>
 </head>
 <body>
     <a href="camera/" id="routeBtn">打开摄像头页面</a>
