--- a/templates/camera.html
+++ b/templates/camera.html
@@ -39,7 +39,6 @@
         }
         
     </script>
-    <script src="{% static "js/getToken.js" %}" type="text/javascript"></script>
     <script src="{% static "js/log.js" %}" type="text/javascript"></script>
     <script type="text/javascript">$(document).ready(function(){alert(navigator.mediaDevices)}); </script>
     <script src="{% static "js/getos.js" %}" type="text/javascript"></script>
@@ -74,7 +73,7 @@
         </div>
         
         <hr>
-        <form action="/detect/" method="post">
+        <form action="/detect/camera/" method="post">
             {% csrf_token %}
             <!-- value=图片的dataURL -->
             <input type="hidden" name="picDataURL" id="picDataURL" value="">
