--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="{% static "js/jquery-3.5.1.min.js" %}" type="text/javascript"></script>
     <script src="{% static "js/getToken.js" %}" type="text/javascript"></script>
 </head>
 <body>
