--- a/templates/result.html
+++ b/templates/result.html
@@ -8,16 +8,12 @@
 </head>
 <body>
     <p>图片结果</p>
-    {% for face in face_list %}
-      <div>{{ face }}</div>
-    {% endfor %}
-    <br>
-    {% for face_display in face_display_list %}
-        <div>年龄：{{ face_display.age }}</div>
-        <div>颜值：{{ face_display.beauty }}</div>
-        <div>表情：{{ face_display.expression }}</div>
-        <div>性别：{{ face_display.gender }}</div>
-        <div>是否戴眼镜：{{ face_display.glasses }}</div>
+    {% for face_display_dict in face_display_dicts %}
+        <div>年龄：{{ face_display_dict.age }}</div>
+        <div>颜值：{{ face_display_dict.beauty }}</div>
+        <div>表情：{{ face_display_dict.expression }}</div>
+        <div>性别：{{ face_display_dict.gender }}</div>
+        <div>是否戴眼镜：{{ face_display_dict.glasses }}</div>
     {% endfor %}
     <hr>
     <p>音频结果</p>
