--- a/templates/camera.html
+++ b/templates/camera.html
@@ -7,6 +7,7 @@
     <title>摄像头获取</title>
     {% load static %}
     <link rel="stylesheet" href="{% static "css/camera.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "css/demo.css" %}">
     <script src="{% static "js/jquery-3.5.1.min.js" %}" type="text/javascript"></script>
     <script src="{% static "js/debug.js" %}" type="text/javascript"></script>
     <script src="{% static "js/polyfill.js" %}" type="module"></script>
@@ -43,62 +44,67 @@
     <script src="{% static "js/getos.js" %}" type="text/javascript"></script>
     <script src="{% static "js/loadContent.js" %}" type="text/javascript"></script>
 </head>
+
 <body>
+
+    <div style="height:100vh;width:10%;float:right;">
+        <button id="loading"></button>
+    </div>
     <div>
         <!-- 版本号 version.js-->
-        <span id="version"></span>
-
+        <span id="version" style="visibility: hidden"></span>
+    
         <!-- pc端进入或移动端进入 loadContent.js-->
-        <span id="deviceInfo"></span>
-        
-        <hr>
+        <span id="deviceInfo" style="visibility: hidden"></span>
+
 
         <!-- 显示可用的设备 getDevices.js-->
         <div id="devicesWrapper" title="选择摄像头">
             <select name="devices" id="devices"></select>
         </div>
 
-        <br>
-
         <!-- 按钮：打开摄像头、关闭摄像头-->
         <span id="onOffBtnsWrapper">
-            <button id="onBtn" onclick="turnOnDevice()">打开摄像头</button>
+            <button id="onBtn" onclick="turnOnDevice()">摄像头拍照</button>
+            <button id="upl" >本地上传</button>
             &nbsp;
             <button id="offBtn" onclick="closeDevice()">关闭摄像头</button>
         </span>
-        
+
         <div id="videoWrapper">
             <video id="video">你的浏览器不支持video标签</video>
         </div>
-        
+
         <hr>
         <form action="/detect/camera/" method="post">
             {% csrf_token %}
             <!-- value=图片的dataURL -->
             <input type="hidden" name="picDataURL" id="picDataURL" value="">
             <!-- 上传按钮，onclick比onsubmit早触发 -->
-            <input type="submit" value="拍照并上传" id="photoBtn" onclick="takePhoto()">
+            <input type="button" value="拍摄" id="photoBtn" onclick="takePhoto()">
+            <input type="submit" value="纯上传" id="photoSubmit">
         </form>
         <button id="downPic" onclick="downPic()">下载图片Base64URL</button>
         <span>（实现上传到后台功能后就不再显示照片）</span>
-        
+
         <br>
 
         <div id="photoWrapper">
             <canvas id="photoCanvas"></canvas>
         </div>
 
-        <!-- TODO 实现上传到后台功能后就把devImgWrapper删除  -->
-        <div id="devImgWrapper">
-            <img id="img" src="" alt="发布时删除">
+        <!-- 预览照片结果 -->
+        <div id="previewWrapper">
+            <img id="photoPreview" src="" alt="照片结果预览">
         </div>
 
         <!-- TODO 发布时将下面的hr 和 div删除或隐藏 -->
-        <hr>
-
         <div id="debugInfo"></div>
+
     </div>
     <script src="{% static "js/mediaUtil.js" %}" type="text/javascript"></script>
     <script src="{% static "js/getDevices.js" %}" type="text/javascript"></script>
+<!--点连线-->
+<script type="text/javascript" color="20,20,20" opacity='0.7' zIndex="-1" count="80" src="{% static "js/canvas-nest.js" %}"></script>
 </body>
 </html>
