--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>一般通过的迎宾页</title>
     {% load static %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="{% static "js/jquery-3.5.1.min.js" %}" type="text/javascript"></script>
-    <script src="{% static "js/getToken.js" %}" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="{% static "css/normalize.css" %}" />
+<link rel="stylesheet" type="text/css" href="{% static "css/demo.css" %}">
+<link rel="stylesheet" href="{% static "css/style.css" %}">
+
+
 </head>
 <body>
-    <a href="camera/" id="routeBtn">打开摄像头页面</a>
+<!--点连线-->
+<script type="text/javascript" color="20,20,20" opacity='0.7' zIndex="-2" count="80" src="{% static "js/canvas-nest.js" %}"></script>
+
+<div class="slider" id="slider" style="--img-prev:url({% static 'images/1.jpg' %})">
+  <div class="slider__content" id="slider-content">
+	<div class="slider__images">
+	  <div class="slider__images-item slider__images-item--active" data-id="1"><img src="{% static "images/1.jpg" %}"></div>
+	  <div class="slider__images-item" data-id="2"><img src="{% static "images/2.jpg" %}"></div>
+	  <div class="slider__images-item" data-id="3"><img src="{% static "images/3.jpg" %}"></div>
+	</div>
+	<div class="slider__text">
+	  <div class="slider__text-item slider__text-item--active" data-id="1">
+		<div class="slider__text-item-head">
+		  <h3>年龄</h3>
+		</div>
+		<div class="slider__text-item-info">
+		  <p>从中华五千年的文化积累中重新认识岁月的意义</p>
+		</div>
+	  </div>
+	  <div class="slider__text-item" data-id="2">
+		<div class="slider__text-item-head">
+		  <h3>性别</h3>
+		</div>
+		<div class="slider__text-item-info">
+		  <p>生来独特</p>
+		</div>
+	  </div>
+	  <div class="slider__text-item" data-id="3">
+		<div class="slider__text-item-head">
+		  <h3>颜值</h3>
+		</div>
+		<div class="slider__text-item-info">
+		  <p>发现属于自己的美丽</p>
+		</div>
+	  </div>
+	</div>
+  </div>
+  <div class="slider__nav">
+	<div class="slider__nav-arrows">
+	  <div class="slider__nav-arrow slider__nav-arrow--left" id="left">to left</div>
+	  <div class="slider__nav-arrow slider__nav-arrow--right" id="right">to right</div>
+	</div>
+	<div class="slider__nav-dots" id="slider-dots">
+	  <div class="slider__nav-dot slider__nav-dot--active" data-id="1"></div>
+	  <div class="slider__nav-dot" data-id="2"></div>
+	  <div class="slider__nav-dot" data-id="3"></div>
+	</div>
+  </div>
+    <button id="routeBtn" onclick="window.location.href='/camera'"></button>
+</div>
+
+
+
+<script src="{% static "js/index.js" %}"></script>
 </body>
 </html>
